Fixt: Visibilité des produits par articles

--- a/public/css/respi.css
+++ b/public/css/respi.css
@@ -509,7 +509,7 @@
     border: 1px solid #000;
 }
 
-#addcar:hover {
+#addcart:hover {
     background-color: #fff;
     border: 1px solid #000;
     color:#000;
